html/index.html

--- a/html/index.html
+++ b/html/index.html
@@ -30,6 +30,14 @@
                         Voluptatum nesciunt fugiat odio dignissimos repudiandae optio iure mollitia. <br>
                         Qui error veniam inventore, quasi neque nostrum quae iure ipsum quisquam, quaerat praesentium.
                     </p>
+                    <hr>
+                    <p> 
+                        Para guardar los cambios en mi repositorio local git <br>
+                       $ git add . <br>
+                       $ git commit -m 'cambio borre prueba' <br>
+                       Luego para guardar los cambios en mi repositorio nube github <br>
+                       $ git push --set-upstream origin master <br>
+                    </p>
                 </div>
             
             </article>
