actualizacion vimos estilos

--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <h1>Este es el titulo principal de mi pagina web</h1>
+        <h1 class="titulo-principal">Este es el titulo principal de mi pagina web</h1>
 
         <span>HOME</span>
         <span>NOTICIAS</span>
@@ -21,7 +21,9 @@
 
     <main>
 
-        <img src="./imagenes/harley.jpg" alt="">
+        <img class="harley" src="./imagenes/harley.jpg" alt="">
+        <img class="harley" src="./imagenes/harley.jpg" alt="">
+        <img class="harley" src="./imagenes/harley.jpg" alt="">
 
         <section>
             <h2>Este es un titulo de seccion</h2>
